--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html">IMDB <span style="color: cyan;">Clone</span></a>
+            <a class="navbar-brand" href="index.html">MOVIE <span style="color: rgb(255, 111, 0);">App</span></a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -24,13 +26,13 @@
             </div>
         </div>
     </nav>
-    <br/>
+    <br />
     <div class="quote-container">
         <p id="quoteText"></p>
     </div>
 
     <div class="container-3 mt-5">
-        <h1 class="mb-4" style="color: whitesmoke;">Search Movies: </h1>
+        <h1 class="mb-4" style="color: rgb(255, 94, 94);">Search Movies </h1>
         <div class="form-group">
             <input type="text" id="searchInput" class="form-control" placeholder="Search for a movie...">
             <button id="searchButton" class="btn btn-primary mt-2">Search</button>
@@ -41,4 +43,5 @@
     <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
+
 </html>
